complete category module
