# app/Http/Requests/Category/CategoryUpdateRequest.php
@@ -3,15 +3,27 @@
 namespace App\Http\Requests\Category;
 
 use Illuminate\Foundation\Http\FormRequest;
+use OpenApi\Attributes as OAT;
 
-class CategoryDeleteRequest extends FormRequest
+#[OAT\Schema(
+    schema: 'CategoryUpdateRequest',
+    required: ['name'],
+    properties: [
+        new OAT\Property(
+            property: 'name',
+            type: 'string',
+            example: 'to-do-list',
+        ),
+    ]
+)]
+class CategoryUpdateRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
      *
      * @return bool
      */
-    public function authorize(): bool
+    public function authorize()
     {
         return $this->user()->can('isUserCategory', $this->route('category'));
     }
@@ -24,7 +36,7 @@ class CategoryDeleteRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'name' => ['required', 'string'],
         ];
     }
 }
