# routes/api/note.php
@@ -8,6 +8,7 @@ Route::group(['prefix' => 'category'], function () {
     Route::get('/', [CategoryController::class, 'index']);
     Route::post('/', [CategoryController::class, 'store']);
     Route::delete('/{category:id}', [CategoryController::class, 'destroy']);
+    Route::put('/{category:id}', [CategoryController::class, 'update']);
 });
 
 Route::group(['prefix' => 'note'], function () {
